app store donwload button

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         <h1>Subscription clarity made simple.</h1>
         <p>SubSavvy keeps every renewal, charge, and forecast in one calming view. See where your money goes, check the incoming renewals, and keep subscriptions under control without spreadsheets.</p>
         <div class="cta-group">
+          <a class="btn btn-primary" href="https://apps.apple.com/it/app/subsavvy/id6756362490" target="_blank" rel="noopener">Download on the App Store</a>
           <a class="btn btn-ghost" href="#support">Need help? Talk to us</a>
         </div>
       </div>
